# inception

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
